--- a/ticket_challange/css/style.css
+++ b/ticket_challange/css/style.css
@@ -105,3 +105,53 @@ transition: background-color 0.3s ease;
 background-color: #dbb020;
 transform: scale(1.1); 
 }
+.menu-btn {
+    position: fixed;
+    left: 7px;
+    background: none;
+    font-size: 30px;
+    border: none;
+    z-index: 1001;
+    
+}
+.menu-btn:hover{
+    color: white;
+    transform: scale(1.3);
+}
+.menu {
+    position: fixed;
+    top: 0px;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.726);
+    transition: 0.3s;
+    padding-top: 20px;
+}
+.menu a {
+    display: block;
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 18px;
+}
+.menu a:hover {
+    background: rgb(104, 99, 99);
+}
+.menu.open {
+    left: 0;
+}
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 100%;
+    background: dark grey;
+    z-index: 1000;
+}
+.overlay.show {
+    display: block;
+}
+
