--- a/ticket_template/css/ticket.css
+++ b/ticket_template/css/ticket.css
@@ -8,7 +8,7 @@ body {
 
 .ticketEntry {
     margin: 5px; 
-    border: 5px solid rgb(238, 51, 0); 
+    border: 5px double rgb(238, 51, 0); 
     border-radius: 6px; 
     flex-grow: 1; 
     line-height: 110%;
@@ -23,11 +23,12 @@ body {
     margin-top: 15px; 
     padding: 15px; 
     width: 290px; 
-    height: 75px; 
+    line-height: 50%;
+    height: 50px; 
     background-color: rgb(255, 30, 0);
     display: block; 
     color: white; 
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
 }
 
