--- a/ticket_challange/css/style.css
+++ b/ticket_challange/css/style.css
@@ -48,7 +48,7 @@ body {
 .featured-ticket {
     height: 550px;
     width: 100%;
-    background-image: url('../images/spikspan.jpg');
+    background-image: url('../images/spikspanmuppets.png');
     background-size: cover;
     background-position: center;
     border-radius: 15px;
