--- a/camera_demo/css/index.css
+++ b/camera_demo/css/index.css
@@ -13,6 +13,7 @@ body {
     width: 100%;
     height: 100%;
     color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; 
     background: rgb(255, 123, 0);
     opacity: 0.5;
     border: none;
