--- a/ticket_challange/css/mede.css
+++ b/ticket_challange/css/mede.css
@@ -232,4 +232,20 @@ body {
 .logout-btn:hover {
     background-color: #e60000;
 }
+.language-selector {
+    padding: 10px;
+}
+
+.language-selector select {
+    background: transparent;
+    border: 1px solid #fff;
+    color: white;
+    padding: 5px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.language-selector select option {
+    color: #333;
+}
 
