--- a/index.css
+++ b/index.css
@@ -219,6 +219,7 @@ body {
     padding: 5px;
     border-radius: 4px;
     cursor: pointer;
+    border: 1px solid #ff8000;
 }
 
 .language-selector select option {
