--- a/ticket_challange/css/style.css
+++ b/ticket_challange/css/style.css
@@ -29,6 +29,7 @@ body {
     color: white;
     background-color: #333;
     margin-bottom: 20px;
+    
 }
 
 .main-container {
@@ -232,6 +233,7 @@ body {
     padding: 5px;
     border-radius: 4px;
     cursor: pointer;
+    border: 1px solid #ff8000;
 }
 
 .language-selector select option {
